--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,22 @@
 {
   "name": "Vylos Anime",
   "short_name": "Vylos",
+  "description": "L'expérience anime ultime",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#020617",
-  "theme_color": "#020617",
+  "theme_color": "#3B82F6",
   "icons": [
     {
-      "src": "/favicon.svg",
-      "sizes": "any",
-      "type": "image/svg+xml"
+      "src": "/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
