--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/node": "^9.5.1",
     "@astrojs/vercel": "^9.0.2",
+    "@vercel/postgres": "^0.10.0",
     "astro": "^5.16.6",
     "hls.js": "^1.6.15",
     "lucide-astro": "^0.556.0",
